--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+form{
+    @media screen and (max-width: 1110px) {
+        margin: 2rem auto;
+    }
+    @media screen and (max-width: 530px) {
+        width: 90vw;
+    }
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input, textarea{
+    padding: 5px;
+    margin-top: 10px;
+    background-color: #171717;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Montserrat', sans-serif;
+    box-sizing: border-box;
+    max-width: 500px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.projectimage{
+    width: 400px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.overlay{
+    position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  font-size: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.menu{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+    display: none;
+    z-index: 2;
+
+    @media screen and (max-width: 750px) {
+        display: flex;
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1000;
+    }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-close{
+    color: #fff;
+    border-radius: 58px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 58px;
+    height: 58px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.overlaylink{
+    text-decoration: none;
+    margin: 2rem;
 }
