--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-form{
+/* form{
     @media screen and (max-width: 1110px) {
         margin: 2rem auto;
     }
@@ -77,4 +77,4 @@ form{
   .overlaylink{
     text-decoration: none;
     margin: 2rem;
-  }
+  } */
