--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,44 @@
     text-decoration: none;
     margin: 2rem;
   } */
+
+  .menu{
+    position: absolute !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center !important;
+    background-color: #000 !important;
+    display: none !important;
+    z-index: 10000 !important;
+  
+    @media screen and (max-width: 750px) {
+        display: flex !important;
+        position: absolute !important;
+        width: 100vw !important;
+        height: 100vh !important;
+        z-index: 1000 !important;
+    }
+  }
+  
+  .btn-close{
+    color: #fff !important;
+    border-radius: 58px !important;
+    position: absolute !important;
+    top: 20px !important;
+    right: 20px !important;
+    width: 58px !important;
+    height: 58px !important;
+    display: flex !important;
+    justify-content: center !important; 
+    align-items: center !important;
+    font-size: 20px !important;
+    cursor: pointer !important;
+  }
+  
+  .overlaylink{
+    text-decoration: none !important;
+    margin: 2rem !important;
+  }
