--- a/src/App.css
+++ b/src/App.css
@@ -1,121 +1,80 @@
-/* form{
-    @media screen and (max-width: 1110px) {
-        margin: 2rem auto;
-    }
-    @media screen and (max-width: 530px) {
-        width: 90vw;
-    }
+form{
+  @media screen and (max-width: 1110px) {
+      margin: 2rem auto;
   }
-  
-  input, textarea{
-    padding: 5px;
-    margin-top: 10px;
-    background-color: #171717;
-    border: none;
-    border-radius: 5px;
-    font-family: 'Montserrat', sans-serif;
-    box-sizing: border-box;
-    max-width: 500px;
+  @media screen and (max-width: 530px) {
+      width: 90vw;
   }
-  
-  .projectimage{
-    width: 400px;
-  }
-  
-  .overlay{
-    position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 24px;
-  }
-  
-  .menu{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
-    display: none;
-    z-index: 2;
-  
-    @media screen and (max-width: 750px) {
-        display: flex;
-        position: absolute;
-        width: 100vw;
-        height: 100vh;
-        z-index: 1000;
-    }
-  }
-  
-  .btn-close{
-    color: #fff;
-    border-radius: 58px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 58px;
-    height: 58px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  
-  .overlaylink{
-    text-decoration: none;
-    margin: 2rem;
-  } */
+}
 
-  .menu{
-    position: absolute !important;
-    width: 100vw !important;
-    height: 100vh !important;
-    display: flex !important;
-    flex-direction: column !important;
-    justify-content: center !important;
-    align-items: center !important;
-    background-color: #000 !important;
-    display: none !important;
-    z-index: 10000 !important;
-  
-    @media screen and (max-width: 750px) {
-        display: flex !important;
-        position: absolute !important;
-        width: 100vw !important;
-        height: 100vh !important;
-        z-index: 1000 !important;
-    }
+input, textarea{
+  padding: 5px;
+  margin-top: 10px;
+  background-color: #171717;
+  border: none;
+  border-radius: 5px;
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  max-width: 500px;
+}
+
+.projectimage{
+  width: 400px;
+}
+
+.overlay{
+  position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.5);
+opacity: 0;
+transition: opacity 0.3s ease;
+display: flex;
+align-items: center;
+justify-content: center;
+color: white;
+font-size: 24px;
+}
+
+.menu{
+  position: absolute !important;
+  width: 100vw !important;
+  height: 100vh !important;
+  display: flex !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  align-items: center !important;
+  background-color: #000 !important;
+  display: none !important;
+  z-index: 2 !important;
+
+  @media screen and (max-width: 750px) {
+      display: flex !important;
+      position: absolute !important;
+      width: 100vw !important;
+      height: 100vh !important;
+      z-index: 1000 !important; 
   }
-  
-  .btn-close{
-    color: #fff !important;
-    border-radius: 58px !important;
-    position: absolute !important;
-    top: 20px !important;
-    right: 20px !important;
-    width: 58px !important;
-    height: 58px !important;
-    display: flex !important;
-    justify-content: center !important; 
-    align-items: center !important;
-    font-size: 20px !important;
-    cursor: pointer !important;
-  }
-  
-  .overlaylink{
-    text-decoration: none !important;
-    margin: 2rem !important;
-  }
+}
+
+.btn-close{
+  color: #fff !important;
+  border-radius: 58px !important;
+  position: absolute !important;
+  top: 20px !important;
+  right: 20px !important;
+  width: 58px !important;
+  height: 58px !important;
+  display: flex !important;
+  justify-content: center !important; 
+  align-items: center !important;
+  font-size: 20px !important; 
+  cursor: pointer !important;
+}
+
+.overlaylink{
+  text-decoration: none !important;
+  margin: 2rem !important;
+}
